--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "native-base": "^2.8.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-calendars": "^1.20.0",
     "react-navigation": "^2.11.2"
   }
 }
