--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-calendars": "^1.20.0",
+    "react-native-elements": "^0.19.1",
     "react-navigation": "^2.12.1"
   }
 }
